--- a/src/app/loading-screen/loading-screen.component.html
+++ b/src/app/loading-screen/loading-screen.component.html
@@ -1,4 +1,4 @@
 <div id="loading">
-    <img id="loading-image" src="/PWM-TEMPLATES/img/LOGO.png" alt="Loading..." />
+    <img id="loading-image" src="https://firebasestorage.googleapis.com/v0/b/bp-santa-brigida.appspot.com/o/LOGO.png?alt=media&token=906590e5-62e0-4b11-a8ed-c0ccb44474db" alt="Loading..." />
     <div class="spinner"></div>
 </div>
