--- a/src/app/app-workshop-service/app-workshop-service.component.html
+++ b/src/app/app-workshop-service/app-workshop-service.component.html
@@ -7,11 +7,12 @@
 
     <aside class="shadow-lg p-3 mb-5 rounded" id="serviciosTaller">
       <button onclick="showServicesMov(0)" type="button" class="btn btn-success">Volver..</button>
+      <app-aside-check-box *ngFor="let elemento of  categories" [DESCRIPCION]="elemento.DESCRIPCION"  ></app-aside-check-box>
     </aside>
 
     <section class="reserve">
       <h1>Reserva</h1>
-
+      <app-calendar></app-calendar>
       <div class="aside-mov">
         <button onclick="showServicesMov(1)" type="button" class="btn btn-light shadow-lg">Servicios</button>
       </div>
@@ -24,7 +25,7 @@
           </button>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <!--Se carga el contenido del carousel desde el json-->
+              
             </div>
           </div>
           <button class="carousel-control-next cn" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
