--- a/src/app/app-dashboard-admin/app-dashboard-admin.component.html
+++ b/src/app/app-dashboard-admin/app-dashboard-admin.component.html
@@ -26,65 +26,35 @@
       </div>
       <div class="count-tab">
         <div class="count shadow-lg">
-          <p>Nº XXXX</p>
+          <p>Nº de Usuarios</p>
           <h2>00.00</h2>
         </div>
 
         <div class="count shadow-lg">
-          <p>Nº XXXX</p>
+          <p>Nº de Reservas Taller</p>
           <h2>00.00</h2>
         </div>
 
         <div class="count shadow-lg">
-          <p>Nº XXXX</p>
-          <h2>00.00</h2>
-        </div>
-
-        <div class="count shadow-lg">
-          <p>Nº XXXX</p>
+          <p>Nº de Pedidos</p>
           <h2>00.00</h2>
         </div>
       </div>
 
       <div class="content-tab">
         <div class="content-op-1 shadow-lg">
-          <h1>TITLE</h1>
-          <p>lorem..........................</p>
-          <p>lorem..........................</p>
-          <p>lorem..........................</p>
-          <p>lorem..........................</p>
-          <p>lorem..........................</p>
-          <p>lorem..........................</p>
+          <h1>Usuarios</h1>
+
         </div>
         <div class="content-op-2 shadow-lg">
-          <h1>TITLE</h1>
-          <p>lorem..........................</p>
-          <p>lorem..........................</p>
-          <p>lorem..........................</p>
-          <p>lorem..........................</p>
-          <p>lorem..........................</p>
-          <p>lorem..........................</p>
+          <h1>Reservas de Taller</h1>
         </div>
       </div>
 
       <div class="content-tab">
         <div class="content-op-3 shadow-lg">
-          <h1>TITLE</h1>
-          <p>lorem..........................</p>
-          <p>lorem..........................</p>
-          <p>lorem..........................</p>
-          <p>lorem..........................</p>
-          <p>lorem..........................</p>
-          <p>lorem..........................</p>
-        </div>
-        <div class="content-op-4 shadow-lg">
-          <h1>TITLE</h1>
-          <p>lorem..........................</p>
-          <p>lorem..........................</p>
-          <p>lorem..........................</p>
-          <p>lorem..........................</p>
-          <p>lorem..........................</p>
-          <p>lorem..........................</p>
+          <h1>Pedidos</h1>
+          <app-mi-reserva-producto></app-mi-reserva-producto>
         </div>
       </div>
 
