--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,8 +1,9 @@
+<!--
 <div class="carousel-home">
     <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="true">
         <div class="carousel-indicators"></div>
         <div class="carousel-inner">
-            <div class="carousel-item active">
+            <div *ngFor="let imagen of imagenes; let i = index" [class.active]="i == 0" class="carousel-item" [style.backgroundImage]="'url(' + imagen + ')'"  class="carousel-item active">
                 <div class="carouselBackground"></div>
             </div>
         </div>
@@ -18,3 +19,22 @@
         </button>
     </div>
 </div>
+
+-->
+<div class="carousel-home">
+    <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="true">
+      <div class="carousel-indicators"></div>
+      <div class="carousel-inner">
+        <div *ngFor="let imagen of imagenes; let i = index" [class.active]="i == 0" class="carousel-item" [style.backgroundImage]="'url(' + imagen + ')'" >
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </div>
