--- a/src/app/aside-check-box/aside-check-box.component.html
+++ b/src/app/aside-check-box/aside-check-box.component.html
@@ -1,8 +1,8 @@
 <div class="category">
     <div class="input-group mb-3">
         <input placeholder={{DESCRIPCION}} readonly="true" type="text" class="form-control nameS" aria-label="Text input with checkbox">
-        <div class="input-group-text">
-            <input class="form-check-input mt-0" type="checkbox" value=""
+        <div (click)="checkTrue(DESCRIPCION)"  class="input-group-text">
+            <input name="checkboxes" class="form-check-input mt-0" type="checkbox" value=""
                 aria-label="Checkbox for following text input">
         </div>
     </div>
