--- a/src/app/mi-reserva-producto/mi-reserva-producto.component.html
+++ b/src/app/mi-reserva-producto/mi-reserva-producto.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 class="title">Mis Reservas</h1>
+  <h1 class="title">Mis Reservas Tienda</h1>
   <div class="reservas">
     <div class="reserva" *ngFor="let reserva of pedidos">
       <div class="reserva-header">
