--- a/src/app/app-workshop-service/app-workshop-service.component.html
+++ b/src/app/app-workshop-service/app-workshop-service.component.html
@@ -1,13 +1,14 @@
 <body>
   <header class="shadow-lg" id="header">
     <app-header *ngIf="!userService.isLoggedIn" class="shadow-lg" id="header"></app-header>
-    <app-header-log *ngIf="userService.isLoggedIn" class="shadow-lg" ></app-header-log>
+    <app-header-log *ngIf="userService.isLoggedIn" class="shadow-lg"></app-header-log>
   </header>
   <main class="main-tienda">
 
     <aside class="shadow-lg p-3 mb-5 rounded" id="serviciosTaller">
       <button onclick="showServicesMov(0)" type="button" class="btn btn-success">Volver..</button>
-      <app-aside-check-box (checkResponse)="check($event)"  *ngFor="let elemento of  categories" [DESCRIPCION]="elemento.DESCRIPCION"  ></app-aside-check-box>
+      <app-aside-check-box (checkResponse)="check($event)" *ngFor="let elemento of  categories"
+        [DESCRIPCION]="elemento.DESCRIPCION"></app-aside-check-box>
     </aside>
 
     <section class="reserve">
@@ -27,30 +28,44 @@
       </div>
 
 
-      <div id="btn-reserve" class="btn-color" data-bs-toggle="modal" data-bs-target="#exampleModal"
-        onclick="reservarServicio()">
+      <div id="btn-reserve" class="btn-color" data-bs-toggle="modal" data-bs-target="#exampleModal2">
         <a ref="" class="btn">Reservar</a>
       </div>
 
       <!-- Modal -->
-      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal2 modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content modal-content-service">
             <div class="modal-body">
               <form>
                 <div class="mb-3">
                   <label for="reservaServicio" class="form-label">Servicio</label>
-                  <input value={{checked}} readonly=true class="form-control" id="reservaServicio" aria-describedby="emailHelp">
-                  <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                  <input #servicio value={{checked}} readonly=true class="form-control" id="reservaServicio"
+                    aria-describedby="emailHelp">
                 </div>
                 <div class="mb-3">
                   <label for="reservaFecha" class="form-label">Fecha de Reserva</label>
-                  <input value={{selected}} readonly=true class="form-control" id="reservaFecha">
+                  <input #fecha value={{selected}} readonly=true class="form-control" id="reservaFecha">
                 </div>
                 <div class="mb-3">
                   <label for="reservaFecha" class="form-label">Marca Y Modelo de Vehiculo</label>
-                  <input class="form-control">
+                  <input #marca class="form-control">
                 </div>
+                <form style="display: flex;justify-content: space-around;">
+                  <mat-form-field appearance="fill">
+                    <mat-label>Hora:</mat-label>
+                    <input #horaFecha type="time" matInput placeholder="hh:mm" required>
+                  </mat-form-field>
+                </form>
+                <p style="    color: red;
+              text-align: center;" *ngIf="servicio.value==''">*Escoja un servicio</p>
+                <p style="    color: red;
+                text-align: center;" *ngIf="fecha.value==''">*Escoja una fecha</p>
+                <p style="    color: red;
+                  text-align: center;" *ngIf="horaFecha.value==''">*Ingrese la hora</p>
+                <p style="    color: red;
+                  text-align: center;" *ngIf="marca.value==''">*Ingrese la marca y modelo de vehiculo</p>
                 <div class="mb-3 form-check">
                   <input type="checkbox" class="form-check-input" id="exampleCheck1">
                   <label class="form-check-label" for="exampleCheck1">Confirmo que he leido los datos de la
@@ -60,8 +75,13 @@
               </form>
             </div>
             <div class="modal-footer">
-              <button type="submit" class="btn btn-primary " data-bs-dismiss="modal">Cancelar</button>
-              <button type="submit" class="btn btn-primary ">Reservar</button>
+              <div id="btn-reserve" class="btn-color">
+                <a class="btn" onclick="$('#exampleModal2').modal('hide');">Cancelar</a>
+              </div>
+              <div id="btn-reserve" class="btn-color">
+                <a class="btn" (click)="reservar(fecha.value, horaFecha.value, servicio.value, marca.value)">Reservar</a>
+              </div>
+
             </div>
           </div>
         </div>
