--- a/src/app/calendar/calendar.component.css
+++ b/src/app/calendar/calendar.component.css
@@ -6,3 +6,7 @@
     background-color: #21b916 !important;
     color: #fff;
 }
+.mat-calendar-body-selected {
+    background-color: #21b916;
+    color: #fff;
+}
