--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,5 +1,4 @@
-<mat-card class="demo-inline-calendar-card"  (click)="select(a.selected)">
-    <mat-calendar #a  [(selected)]="selected"></mat-calendar>
-  </mat-card>
-  <p>Selected date: {{selected}}</p>
-  
+<mat-card class="demo-inline-calendar-card" color="warn" (click)="select(a.selected)">
+  <mat-calendar #a [(selected)]="selected"></mat-calendar>
+</mat-card>
+<p>Selected date: {{selected}}</p>
