Versión 21. Agregada funcionalidad de carga de imágenes y texto dinámico.

--- a/src/app/app-home/app-home.component.html
+++ b/src/app/app-home/app-home.component.html
@@ -75,7 +75,7 @@
                 </div>
             </div>
             <div class="image-bp_card">
-                <img class="image-bp_card" src="../assets/img/bp_card.png">
+                <img class="image-bp_card" src= {{bpUrl}}>
             </div>
         </div>
 
