--- a/src/app/app-dashboard-user/app-dashboard-user.component.html
+++ b/src/app/app-dashboard-user/app-dashboard-user.component.html
@@ -54,7 +54,7 @@
     
     <app-mi-cuenta *ngIf="type==0"></app-mi-cuenta>
     <app-mi-reserva-producto *ngIf="type==1"></app-mi-reserva-producto>
-
+    
   </main>
-
+  <app-footer id="footer"></app-footer>
 </body>
