--- a/src/styles.css
+++ b/src/styles.css
@@ -916,6 +916,10 @@
   
   /*Tablets*/
   @media screen and (min-width: 768px) and (max-width: 1279px) {
+    .card {
+      width: 250px !important;
+      height: 450px !important;
+    }
     /*Modal Service*/
     .modal-content-service{
       width: 500px !important;
