--- a/src/app/app-dashboard-admin/app-dashboard-admin.component.css
+++ b/src/app/app-dashboard-admin/app-dashboard-admin.component.css
@@ -5,19 +5,19 @@
     align-items: flex-end;
     align-content: flex-start;
   }
-  
+
   .title {
     color: #21b916;
     font-size: 36px;
     margin-bottom: 30px;
     text-align: center;
   }
-  
+
   .reservas {
     display: flex;
     flex-wrap: wrap;
   }
-  
+
   .reserva {
     background-color: #fff;
     border-radius: 10px;
@@ -26,71 +26,79 @@
     overflow: hidden;
     width: 350px;
   }
-  
+
   .reserva:hover {
     transform: scale(1.05);
     transition: all 0.3s ease-in-out;
   }
-  
+
   .reserva-header {
     background-color: #21b916;
     border-radius: 10px 10px 0 0;
     color: white;
     padding: 20px;
   }
-  
+
   .reserva-header h2 {
     font-size: 24px;
     margin: 0;
   }
-  
+
   .reserva-header p {
     font-size: 14px;
     margin: 0;
   }
-  
+
   .reserva-body {
     padding: 20px;
   }
 
-  .reserva-body button {
-      background-color: #378311;
-      border-radius: 10px;
-      color: white;
-      border-color: unset;
+  .btn {
+    margin: 0.5rem;
+    background-color: #378311;
+    color: white;
   }
 
-  .reserva-body button:hover{
-    background-color: #21b916;
-}
-  
+  .btn:hover {
+    background-color: #36b920;
+  }
+
+  .red {
+    margin: 0.5rem;
+    background-color: #c40006 !important;
+    color: white !important;
+  }
+
+  .red:hover {
+    background-color: #ff262d !important;
+  }
+
   .reserva-item {
     display: flex;
     justify-content: space-between;
     margin-bottom: 10px;
   }
-  
+
   .reserva-item label {
     color: #21b916;
     font-size: 16px;
     font-weight: bold;
     margin-right: 10px;
   }
-  
+
   ul {
     margin: 0;
     padding: 0;
     list-style: none;
   }
-  
+
   ul li {
     font-size: 14px;
     margin-bottom: 5px;
     text-align: left;
   }
-  
+
   .total {
     font-size: 18px;
     font-weight: bold;
   }
-  
