--- a/src/app/app-workshop-service/app-workshop-service.component.html
+++ b/src/app/app-workshop-service/app-workshop-service.component.html
@@ -79,7 +79,7 @@
                 <a class="btn" onclick="$('#exampleModal2').modal('hide');">Cancelar</a>
               </div>
               <div id="btn-reserve" class="btn-color">
-                <a class="btn" (click)="reservar(fecha.value, horaFecha.value, servicio.value, marca.value)">Reservar</a>
+                <a class="btn" (click)="reservar(fecha.value, horaFecha.value, servicio.value, marca.value)" onclick="$('#exampleModal2').modal('hide');">Reservar</a>
               </div>
 
             </div>
