--- a/src/app/mi-reserva-servicio/mi-reserva-servicio.component.html
+++ b/src/app/mi-reserva-servicio/mi-reserva-servicio.component.html
@@ -24,8 +24,8 @@
             <span>{{reserva.Servicio}}</span>
           </div>
           <div class="reserva-item">
-            <label>Marca y Modelo:</label>
-            <span>{{ reserva.MarcaModelo}}</span>
+            <label>Vehiculo:</label>
+            <span>{{ reserva.Vehiculo}}</span>
           </div>
         </div>
       </div>
